--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ authors = [
 keywords = ["abm", "agent-based", "market", "finance", "simulation"]
 classifiers = [
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT License",
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
@@ -31,7 +34,7 @@ dependencies = [
 
 [project.optional-dependencies]
 plot = ["matplotlib>=3.7"]
-dev = ["pytest>=8.0", "ruff>=0.6.0", "mypy>=1.10.0"]
+dev = ["pytest>=8.0", "ruff>=0.6.0", "mypy>=1.10.0", "pandas-stubs>=2.2.0.240909"]
 ml = ["torch>=2.2", "gymnasium>=0.29", "stable-baselines3>=2.3"]
 
 [project.urls]
